--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web</title>
+    <!-- 加载 calendar.js 到全局作用域 -->
+    <script src="/src/utils/calendar.js"></script>
   </head>
   <body>
     <div id="root"></div>
